--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
     "wagmi": "^0.11.0",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1"
+  },
+  "overrides":{
+    "@svgr/webpack": "$@svgr/webpack"
   },
   "scripts": {
     "start": "react-scripts start",
