--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "ethers": "^5.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.4.0",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "styled-components": "^5.3.6",
     "wagmi": "^0.11.0",
     "web-vitals": "^2.1.4"
